fixed the sbout section overflow

--- a/css/leon.css
+++ b/css/leon.css
@@ -19,6 +19,7 @@ html {
 }
 body {
   font-family: "Work Sans", sans-serif;
+  max-width: 100%;
 }
 .container {
   padding: 0 15px;
@@ -371,11 +372,15 @@ ul {
     display: None;
   }
   .about .about-content {
-    place-content: center;
     text-align: center;
     }
     .about .about-img {
       margin: auto;
+    }
+    .about .about-content .about-text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 }
 .about .about-img img {
